more ppnt testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ log-utils = {path = "libs/log_utils", develop = true}
 yaml-parser = {path = "libs/yaml_parser", develop = true}
 laika = {path = "libs/laika", develop = true}
 navsim = {path = "libs/navsim", develop = true}
+sympy = "^1.12"
+basemap = "^1.4.1"
 
 [tool.poetry.group.dev.dependencies]
 snakeviz = "^2.2.0"
