--- a/configs/soop_ins_sim.yaml
+++ b/configs/soop_ins_sim.yaml
@@ -1,7 +1,9 @@
 time:
   # duration: 204.49
-  duration: 1799.0
-  fsim: 1 # [Hz]
+  # duration: 1799.0
+  # duration: 1000.0
+  duration: 210.0
+  fsim: 100 # [Hz]
   year: 2024
   month: 1
   day: 1
@@ -10,14 +12,15 @@ time:
   second: 0
 
 constellations:
-  mask_angle: 5.0 # [deg]
+  mask_angle: 0.0 # [deg]
   emitters:
+    # gps:
+    #   signal: gps
     iridium-next:
       signal: iridium
-    orbcomm:
-      signal: orbcomm
-    buoy:
-      signal: buoy
+    # buoy:
+    #   signal: buoy
+    #   js: 15.0
 
 errors:
   # ionosphere: klobuchar
@@ -32,4 +35,68 @@ imu:
 
 # 22.0,-125.4
 # 47.0,-167.5
-# -28.8,-7.7
+# 46.0,-44.0
+# -30,-5.0
+# 61.0,-10.0
+
+# 1,   0.2,   0.000,  0.0,   0.05,    0.0,    0.0, 150, 1
+# 1,  -0.2,   0.000,  0.0,   0.05,    0.0,    0.0, 150, 1
+# 1,  0.15,  -0.000,  0.0,    0.0,   0.01,    0.0, 200, 1
+# 1, -0.15,  -0.000,  0.0,    0.0,  -0.01,    0.0, 200, 1
+# 1,   0.2,   0.000,  0.0,  -0.05,    0.0,    0.0, 150, 1
+# 1,  -0.2,   0.000,  0.0,  -0.05,    0.0,    0.0, 150, 1
+
+# 1,   0.1,  0.001, 0.0,  0.03, 0.0, 0.0, 300, 1
+# 1, -0.12, -0.002, 0.0,   0.0, 0.0, 0.0, 400, 1
+# 1,   0.1,  0.001, 0.0, -0.03, 0.0, 0.0, 300, 1
+
+# 1,   0.2,   0.001,  0.0,    0.1,    0.0,    0.0, 30, 1
+# 1,  0.15,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,  0.25,   0.000,  0.0,   0.05,    0.0,    0.0, 30, 1
+# 1,  0.15,   0.002,  0.0,   0.05,    0.0,    0.0, 30, 1
+# 1,   0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,  -0.2,   0.001,  0.0,    0.1,    0.0,    0.0, 30, 1
+# 1, -0.15,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1, -0.25,   0.000,  0.0,   0.05,    0.0,    0.0, 30, 1
+# 1, -0.15,   0.002,  0.0,   0.05,    0.0,    0.0, 30, 1
+# 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,   0.1,  -0.001,  0.0,    0.0,   0.01,    0.0, 50, 1
+# 1,  0.15,  -0.002,  0.0,    0.0,   0.01,    0.0, 50, 1
+# 1,  0.25,  -0.002,  0.0,    0.0,  -0.01,    0.0, 50, 1
+# 1,  0.15,  -0.001,  0.0,    0.0,  -0.01,    0.0, 50, 1
+# 1,  -0.1,  -0.001,  0.0,    0.0,   0.01,    0.0, 50, 1
+# 1, -0.15,  -0.002,  0.0,    0.0,   0.01,    0.0, 50, 1
+# 1, -0.25,  -0.002,  0.0,    0.0,  -0.01,    0.0, 50, 1
+# 1, -0.15,  -0.001,  0.0,    0.0,  -0.01,    0.0, 50, 1
+# 1,   0.2,   0.001,  0.0,   -0.1,    0.0,    0.0, 30, 1
+# 1,   0.1,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,  0.25,   0.000,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,   0.1,   0.002,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,   0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,  -0.2,   0.001,  0.0,   -0.1,    0.0,    0.0, 30, 1
+# 1,  -0.1,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1, -0.25,   0.000,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,  -0.1,   0.002,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
+
+# 1, -0.25,   0.000,  0.0,   0.05,    0.0,    0.0, 30, 1
+# 1, -0.15,   0.002,  0.0,   0.05,    0.0,    0.0, 30, 1
+# 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,   0.1,  -0.001,  0.0,    0.1,    0.0,    0.0, 50, 1
+# 1,  0.15,  -0.002,  0.0,    0.1,    0.0,    0.0, 50, 1
+# 1,  0.25,  -0.002,  0.0,   0.05,    0.0,    0.0, 50, 1
+# 1,  0.15,  -0.001,  0.0,   0.05,    0.0,    0.0, 50, 1
+# 1,  -0.1,  -0.001,  0.0,  -0.05,    0.0,    0.0, 50, 1
+# 1, -0.15,  -0.002,  0.0,  -0.05,    0.0,    0.0, 50, 1
+# 1, -0.25,  -0.002,  0.0,   -0.1,    0.0,    0.0, 50, 1
+# 1, -0.15,  -0.001,  0.0,   -0.1,    0.0,    0.0, 50, 1
+# 1,   0.2,   0.001,  0.0,   -0.1,    0.0,    0.0, 30, 1
+# 1,   0.1,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,  0.25,   0.000,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,   0.1,   0.002,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,   0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1,  -0.2,   0.001,  0.0,   -0.1,    0.0,    0.0, 30, 1
+# 1,  -0.1,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
+# 1, -0.25,   0.000,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,  -0.1,   0.002,  0.0,  -0.05,    0.0,    0.0, 30, 1
+# 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
