finall ppnt testing and results

--- a/configs/soop_ins_sim.yaml
+++ b/configs/soop_ins_sim.yaml
@@ -1,9 +1,9 @@
 time:
   # duration: 204.49
   # duration: 1799.0
-  # duration: 1000.0
-  duration: 210.0
-  fsim: 100 # [Hz]
+  duration: 1000.0
+  # duration: 200.0
+  fsim: 1 # [Hz]
   year: 2024
   month: 1
   day: 1
@@ -12,15 +12,23 @@ time:
   second: 0
 
 constellations:
-  mask_angle: 0.0 # [deg]
+  mask_angle: 7.5 # [deg]
   emitters:
     # gps:
     #   signal: gps
-    iridium-next:
-      signal: iridium
-    # buoy:
-    #   signal: buoy
-    #   js: 15.0
+    # oneweb:
+    #   signal: oneweb
+    # starlink:
+    #   signal: starlink
+    # globalstar:
+    #   signal: globalstar
+    # orbcomm:
+    #   signal: orbcomm
+    # iridium-next:
+    #   signal: iridium
+    buoy:
+      signal: buoy
+      js: 20.0
 
 errors:
   # ionosphere: klobuchar
@@ -60,28 +68,6 @@ imu:
 # 1, -0.25,   0.000,  0.0,   0.05,    0.0,    0.0, 30, 1
 # 1, -0.15,   0.002,  0.0,   0.05,    0.0,    0.0, 30, 1
 # 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
-# 1,   0.1,  -0.001,  0.0,    0.0,   0.01,    0.0, 50, 1
-# 1,  0.15,  -0.002,  0.0,    0.0,   0.01,    0.0, 50, 1
-# 1,  0.25,  -0.002,  0.0,    0.0,  -0.01,    0.0, 50, 1
-# 1,  0.15,  -0.001,  0.0,    0.0,  -0.01,    0.0, 50, 1
-# 1,  -0.1,  -0.001,  0.0,    0.0,   0.01,    0.0, 50, 1
-# 1, -0.15,  -0.002,  0.0,    0.0,   0.01,    0.0, 50, 1
-# 1, -0.25,  -0.002,  0.0,    0.0,  -0.01,    0.0, 50, 1
-# 1, -0.15,  -0.001,  0.0,    0.0,  -0.01,    0.0, 50, 1
-# 1,   0.2,   0.001,  0.0,   -0.1,    0.0,    0.0, 30, 1
-# 1,   0.1,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
-# 1,  0.25,   0.000,  0.0,  -0.05,    0.0,    0.0, 30, 1
-# 1,   0.1,   0.002,  0.0,  -0.05,    0.0,    0.0, 30, 1
-# 1,   0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
-# 1,  -0.2,   0.001,  0.0,   -0.1,    0.0,    0.0, 30, 1
-# 1,  -0.1,   0.002,  0.0,    0.0,    0.0,    0.0, 30, 1
-# 1, -0.25,   0.000,  0.0,  -0.05,    0.0,    0.0, 30, 1
-# 1,  -0.1,   0.002,  0.0,  -0.05,    0.0,    0.0, 30, 1
-# 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
-
-# 1, -0.25,   0.000,  0.0,   0.05,    0.0,    0.0, 30, 1
-# 1, -0.15,   0.002,  0.0,   0.05,    0.0,    0.0, 30, 1
-# 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
 # 1,   0.1,  -0.001,  0.0,    0.1,    0.0,    0.0, 50, 1
 # 1,  0.15,  -0.002,  0.0,    0.1,    0.0,    0.0, 50, 1
 # 1,  0.25,  -0.002,  0.0,   0.05,    0.0,    0.0, 50, 1
@@ -100,3 +86,11 @@ imu:
 # 1, -0.25,   0.000,  0.0,  -0.05,    0.0,    0.0, 30, 1
 # 1,  -0.1,   0.002,  0.0,  -0.05,    0.0,    0.0, 30, 1
 # 1,  -0.2,   0.001,  0.0,    0.0,    0.0,    0.0, 30, 1
+
+# 1,    0,     0, 0,  0, 0, 0, 50
+# 1,    0,  0.15, 0,  1, 0, 0, 20
+# 1,  2.9,     0, 0,  0, 0, 0, 60
+# 1,    0,  0.15, 0,  0, 0, 0, 20
+# 1,    0, -0.35, 0,  0, 0, 0, 20
+# 1,    0,     0, 0, -1, 0, 0, 10
+# 1,    0,     0, 0,  0, 0, 0, 20.01
