--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ navsim = {path = "libs/navsim", develop = true}
 sympy = "^1.12"
 basemap = "^1.4.1"
 scikit-learn = "^1.4.1.post1"
+h5py = "^3.11.0"
+plotly = "^5.22.0"
+planar = {git = "git@github.com:chalk-diagrams/planar.git"}
+cartopy = "^0.23.0"
 
 [tool.poetry.group.dev.dependencies]
 snakeviz = "^2.2.0"
