--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ numba = "^0.58.1"
 openpyxl = "^3.1.4"
 pandas = "^2.1.1"
 plotly = "^5.22.0"
+pyqt5-qt5 = "=5.15.2"
 seaborn = "^0.13.2"
 scipy = "^1.12.0"
 sympy = "^1.12"
 yamlparser = { path = "libs/yamlparser", develop = true }
-gdal = "^3.9.0"
 
 [tool.poetry.group.dev.dependencies]
 snakeviz = "^2.2.0"
