--- a/configs/gnss+_sim.yaml
+++ b/configs/gnss+_sim.yaml
@@ -28,10 +28,13 @@ constellations:
       signal: gps
       
 mc_params:
-  scenarios: ["static", "dynamic"]
-  # attenuation: [0, 5, 10, 15, 20, 22.5, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37.5, 40]
-  attenuation: [0.0, 5.0, 10.0, 15.0, 20.0, 25.0, 30.0, 35.0, 40.0]
-  imu_models: ["consumer", "industrial", "tactical"]
-  n_ant: [1, 2, 3, 4]
-  n_runs: 100
-  init_pva_err_std: [3.0, 3.0, 5.0, 0.1, 0.1, 0.15, 3.0, 3.0, 10.0] # m, m/s, deg
+  # scenarios: ["static", "dynamic"]
+  scenarios: ["dynamic"]
+  attenuation: [15.0, 17.5, 20.0, 22.0, 24.0, 26.0, 28.0, 30.0, 32.0, 34.0, 37.0, 40.0]
+  # attenuation: [0.0]
+  imu_models: ["consumer"]
+  # imu_models: ["tactical"]
+  n_ant: [1,2,3,4]
+  # n_ant: [1]
+  n_runs: 30
+  init_pva_err_std: [1.0, 1.0, 2.0, 0.05, 0.05, 0.1, 0.5, 0.5, 2.0] # m, m/s, deg
